# UltraAI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
Docs/: LocalAdapters.md  UltraNetIntegration.md  UltraVault.md
adapters/common/: Base64.cpp  Base64.h  HttpClient.cpp  HttpClient.h  MiniJson.cpp  MiniJson.h  SseParser.cpp  SseParser.h
adapters/local/: LocalAdapters.cpp
adapters/mock/: MockAdapters.cpp
examples/: SmokeLocal.cpp
include/: UltraAI.h  UltraAICodeAssist.h  UltraAICommon.h  UltraAIEmbeddings.h  UltraAIImageGen.h  UltraAIMusicGen.h  UltraAISpeechToText.h  UltraAITextLLM.h  UltraAITextToSpeech.h  UltraAITranslator.h  UltraAIVideoGen.h  UltraAIVisionAnalyzer.h
src/: BuiltinAdapters.cpp  FactoryCodeAssist.cpp  FactoryEmbeddings.cpp  FactoryImageGen.cpp  FactoryMusicGen.cpp  FactorySpeechToText.cpp  FactoryTextLLM.cpp  FactoryTextToSpeech.cpp  FactoryTranslator.cpp  FactoryVideoGen.cpp  FactoryVisionAnalyzer.cpp  NoBuiltinAdaptersStub.cpp  UltraAICommon.cpp  UltraAIRegistry.h
tests/: FakeLocalServer.h  TestCore.cpp  TestHelpers.h  TestLocalAdapters.cpp  TestMediaCapabilities.cpp  TestTextCapabilities.cpp
